# WebHumanBench

./: .gitignore  CITATION.cff  DATA_CARD.md  LICENSE  README.md  RELEASE.md  THIRD_PARTY_ARTIFACT_NOTICES.md  pyproject.toml
benchmark/: README.md
docs/: FORMAL_BENCHMARK_GATE.md  REPRODUCING.md  WEBHUMANBENCH_V1_REFERENCE_DESIGN_PROFILE.md  WEBHUMANBENCH_V1_RELEASE.md
results/: webhumanbench_v1_human_likeness_baseline.json  webhumanbench_v1_prompt_factorial.json  webhumanbench_v1_prompt_factorial_browser_150_0_7871_115_recompute_audit.json  webhumanbench_v1_prompt_factorial_browser_150_0_7871_129.json  webhumanbench_v1_prompt_factorial_browser_patch_audit.json  webhumanbench_v1_prompt_factorial_source_run.json  webhumanbench_v1_protocol_audit.json  webhumanbench_v1_public_release_audit.json  webhumanbench_v1_readiness.json  webhumanbench_v1_reference_baselines.json  webhumanbench_v1_reference_design_profile.json  webhumanbench_v1_release_candidate_audit_recomputed.json  webhumanbench_v1_render_screen_r5.json  webhumanbench_v1_sensitivity_diagnostics.json  webhumanbench_v1_visual_embedding_baselines.json
scripts/: analyze_webhumanbench_reference_profile.py  assemble_webhumanbench_v1_corpus.py  audit_benchmark_readiness.py  audit_public_release.py  audit_reference_render_integrity.py  build_webhumanbench_v1_ai_ledgers.py  capture_open_mobile_reference.py  capture_vendored_static_snapshots.py  compare_prompt_factorial_browser_patches.py  materialize_pinned_entrypoint_closures.py  preflight_public_release.py  rebind_webhumanbench_v1_capture_ledger.py  run_external_600_siliconflow.py  run_human_likeness_benchmark.py  run_prompt_factorial.py  run_reference_fit_baselines.py  run_visual_embedding_baseline.py  run_webhumanbench_v1_diagnostics.py  run_webhumanbench_v1_protocol_audit.py  stage_webhumanbench_release_bundle.py  stage_webhumanbench_v1_analysis_release.py
tests/: test_assemble_webhumanbench_v1_corpus.py  test_benchmark_baselines.py  test_benchmark_diagnostics.py  test_benchmark_protocol_audit.py  test_benchmark_readiness.py  test_design_profile.py  test_human_likeness.py  test_preflight_public_release.py  (+7 more)
(+66 files in other folders)
